--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -23,5 +23,7 @@ app:
   base:
     url: ${APP_BASE_URL:http://localhost:8080}
 
+GEMINI_API_KEY: ${GEMINI_API_KEY}
 
-GEMINI_API_KEY: ${GEMINI_API_KEY:}
+# ConvertAPI configuration for PDF to text conversion
+CONVERT_API_TOKEN: ${CONVERT_API_TOKEN}
