--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
   datasource:
     url: ${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/entertainmentdb}
     username: ${JDBC_DATABASE_USERNAME:entertainmentdb}
