First draft to generate image via FAL using nano banana

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -28,6 +28,8 @@ app:
     url: ${APP_BASE_URL:http://localhost:8080}
 
 GEMINI_API_KEY: ${GEMINI_API_KEY}
+FAL_API_KEY: ${FAL_API_KEY}
 
 # ConvertAPI configuration for PDF to text conversion
 CONVERT_API_TOKEN: ${CONVERT_API_TOKEN}
+
