feat: backend - implement .env file support for configuration management
- Add dotenv-java dependency for .env file loading
- Load .env file in main application class before Spring Boot startup
- Remove default values from application.yml to rely entirely on .env
- Update application.yml with environment variable placeholders
- Application now fails fast if .env file is missing or malformed
- Support for database, API keys, logging, and server configuration

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,12 +1,15 @@
+server:
+  port: ${SERVER_PORT:8080}
+
 spring:
   servlet:
     multipart:
       max-file-size: 50MB
       max-request-size: 50MB
   datasource:
-    url: ${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/entertainmentdb}
-    username: ${JDBC_DATABASE_USERNAME:entertainmentdb}
-    password: ${JDBC_DATABASE_PASSWORD:entertainmentdb}
+    url: ${JDBC_DATABASE_URL:}
+    username: ${JDBC_DATABASE_USERNAME:}
+    password: ${JDBC_DATABASE_PASSWORD:}
     hikari:
       maxLifetime: 300000
       validationTimeout: 3000
@@ -15,19 +18,25 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: ${JPA_DDL_AUTO:create-drop}
-    show-sql: true
+      ddl-auto: ${JPA_DDL_AUTO:}
+    show-sql: ${JPA_SHOW_SQL:}
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     defer-datasource-initialization: true
   sql:
     init:
       mode: always
 
+# Application specific configuration
 app:
   base:
     url: ${APP_BASE_URL:http://localhost:8080}
 
-GEMINI_API_KEY: ${GEMINI_API_KEY}
+# External API configurations
+GEMINI_API_KEY: ${GEMINI_API_KEY:}
+CONVERT_API_TOKEN: ${CONVERT_API_TOKEN:}
 
-# ConvertAPI configuration for PDF to text conversion
-CONVERT_API_TOKEN: ${CONVERT_API_TOKEN}
+# Logging configuration
+logging:
+  level:
+    com.bestgroup.HomeEntertAInment: ${LOG_LEVEL:INFO}
+    org.springframework.web: ${SPRING_WEB_LOG_LEVEL:INFO}
