--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ node_modules
 package-lock.json
 package.json
 .idea
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
