--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -41,6 +41,8 @@ app:
 # External API configurations
 GEMINI_API_KEY: ${GEMINI_API_KEY:}
 CONVERT_API_TOKEN: ${CONVERT_API_TOKEN:}
+FAL_API_KEY: ${FAL_API_KEY}
+RUNWARE_API_KEY: ${RUNWARE_API_KEY:}
 
 # Logging configuration
 logging:
