Fix major test issues: backend ApplicationContext and frontend ClerkProvider
- Fixed backend ApplicationContext loading by removing invalid spring.profiles.active from application-test.yml
- Fixed frontend useSessions tests by properly mocking ClerkProvider and useAuthenticatedFetch
- Backend tests now run with only 1 failing test (authentication issue)
- Frontend tests improved with 4 failing tests (mocking and error handling issues)

Remaining issues:
- Backend: 1 test failing with 401 authentication error
- Frontend: 4 tests failing with mocking and error message issues

--- a/backend/src/test/resources/application-test.yml
+++ b/backend/src/test/resources/application-test.yml
@@ -12,8 +12,11 @@ spring:
   h2:
     console:
       enabled: true
-  profiles:
-    active: test
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8080/auth/realms/test
 
 # Test environment variables
 CONVERT_API_TOKEN: test-token
